# shalom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  _typos.toml  pubspec.yml  run_tests.sh  shalom.yml
codegen/: Cargo.toml
rust/: Cargo.toml
rust/shalom_core/: Cargo.toml
rust/shalom_core/src/: context.rs  entrypoint.rs  lib.rs  shalom_config.rs
rust/shalom_core/src/operation/: context.rs  mod.rs  parse.rs  types.rs
rust/shalom_core/src/schema/: context.rs  mod.rs  resolver.rs  types.rs  utils.rs
rust/shalom_dart_codegen/: Cargo.toml
rust/shalom_dart_codegen/dart_tests/: README.md  pubspec.yaml
rust/shalom_dart_codegen/dart_tests/android/app/: build.gradle.kts
rust/shalom_dart_codegen/dart_tests/ios/Runner.xcodeproj/: project.pbxproj
rust/shalom_dart_codegen/dart_tests/lib/: point.dart
rust/shalom_dart_codegen/dart_tests/linux/: CMakeLists.txt
rust/shalom_dart_codegen/dart_tests/test/: widget_test.dart
rust/shalom_dart_codegen/dart_tests/web/: index.html  manifest.json
rust/shalom_dart_codegen/dart_tests/windows/: CMakeLists.txt
rust/shalom_dart_codegen/src/: lib.rs  main.rs
rust/shalom_dart_codegen/templates/: macros.dart.jinja  operation.dart.jinja  query.jinja.dart  schema.dart.jinja  schema.jinja.dart
rust/shalom_dart_codegen/tests/: mod.rs  schema.graphql  test.dart
rust/shalom_dart_codegen/tests/usecases/: mod.rs  test_custom_scalar.rs  test_custom_scalar_arguments.rs  test_custom_scalar_point.rs  test_enum_arguments.rs  test_enum_selection.rs  test_input_objects.rs  test_nested_input_objects.rs  test_object_selection.rs  test_operation_scalar_arguments.rs  test_simple_scalars.rs
(+156 files in other folders)
