[package]
name = "shalom_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
apollo-compiler = "=1.28.0"
simple_logger = {workspace = true}
log = {workspace = true}
glob = {workspace = true}

serde = {workspace = true}
serde_json = {workspace = true}
minijinja = {workspace = true}