[package]
name = "shalom_dart_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = {workspace = true}
log = {workspace = true}
simple_logger = {workspace = true}
shalom_parser = { path = "../shalom_parser" }
apollo-compiler = "=1.0.0-beta.20"
minijinja = "2.1.1"