[package]
name = "shalom_dart_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
minijinja = {workspace = true}

anyhow = {workspace = true}
log = {workspace = true}
simple_logger = {workspace = true}
shalom_parser = { path = "../shalom_parser" }
apollo-compiler = "=1.0.0-beta.20"

[dev-dependencies]
lazy_static = "1.5.0"
